# car-showroom

./: .gitignore  CMakeLists.txt  PROJECT_STATUS.md  README.md  shader_test_started.txt
ProjectSource/: CMakeLists.txt
ProjectSource/include/cars/: CarBase.hpp  FamilyCar.hpp  MainCar.hpp
ProjectSource/include/core/: Camera.hpp  Constants.hpp  InputSystem.hpp  Renderable.hpp  SceneManager.hpp  TestRenderable.hpp
ProjectSource/include/halls/: CenterHall.hpp  FamilyHall.hpp  LuxuryHall.hpp
ProjectSource/include/registrars/: HallRegistrar.hpp
ProjectSource/include/rendering/: FloorRenderable.hpp  ModelRegistrar.hpp  Renderer.hpp  Shader.hpp  ShapeBuilder.hpp  Texture.hpp  TextureRegistrar.hpp  WallRenderable.hpp
ProjectSource/shaders/: basic_texture.vert  car_lighting.frag  car_lighting.vert  transparent.frag
ProjectSource/src/: main.cpp
ProjectSource/src/cars/: SimpleCarEV.cpp  SimpleCarSport.cpp
ProjectSource/src/core/: CameraController.cpp  SceneManager.cpp
ProjectSource/src/halls/: CenterHall.cpp  FamilyHall.cpp  HallBase.cpp  LuxuryHall.cpp  SportHall.cpp
ProjectSource/src/rendering/: App.cpp  FloorRenderable.cpp  Mesh.cpp  ShapeBuilder.cpp  TextureRegistrar.cpp  WallRenderable.cpp
include/cars/: MainCar.hpp  SimpleCarEV.hpp  SimpleCarLuxury.hpp  SimpleCarSport.hpp
include/core/: AnimationController.hpp  CameraController.hpp
include/halls/: EVHall.hpp  HallBase.hpp  SportHall.hpp
include/registrars/: CarRegistrar.hpp
include/rendering/: App.hpp  GrassRenderable.hpp  Mesh.hpp  ShaderRegistrar.hpp  ShapeBuilder.hpp
shaders/: basic_texture.frag
src/cars/: FamilyCar.cpp  MainCar.cpp  SimpleCarLuxury.cpp
src/core/: AnimationController.cpp  InputSystem.cpp  TestRenderable.cpp
src/halls/: CenterHall.cpp  EVHall.cpp
src/registrars/: CarRegistrar.cpp  HallRegistrar.cpp
src/rendering/: GrassRenderable.cpp  ModelRegistrar.cpp  Renderer.cpp  Shader.cpp  ShaderRegistrar.cpp  ShapeBuilder.cpp  Texture.cpp
